--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body,html {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #dddddd;
     font-family: "Sue Ellen Francisco", cursive;
     font-size: 25px;
 }
@@ -26,10 +26,21 @@ body,html {
     text-align: center;
 }
 
+.social-links {
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    justify-content: space-evenly;
+}
+
+.social-links svg {
+    fill: #dddddd;
+}
+
 #name {
     animation: fade-in 1s linear 0.3s 1 both;
 }
 
-#date {
+#date, .social-links {
     animation: fade-in 1s linear 2s 1 both;
 }
