--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body,html {
 }
 
 .bgimg {
-    background-image: url('images/background.png');
+    background-image: url('images/background.webp');
     height: 100%;
     background-position: center;
     background-size: cover;
