--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,67 @@
-body,html {
-    height: 100%;
-    margin: 0;
+body,
+html {
+  height: 100%;
+  margin: 0;
 }
 
 @keyframes fade-in {
-    from { opacity: 0; } 
-    to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .bgimg {
-    background-image: url('images/background.webp');
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #dddddd;
-    font-family: "Sue Ellen Francisco", cursive;
-    font-size: 25px;
+  background-image: url("images/background.webp");
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #dddddd;
+  font-family: "Sue Ellen Francisco", cursive;
+  font-size: 25px;
 }
 
 .middle {
-    text-align: center;
+  text-align: center;
 }
 
 .social-links {
-    display: flex;
-    flex-direction: row;
-    margin: 10px;
-    justify-content: space-evenly;
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  justify-content: space-evenly;
 }
 
 .social-links svg {
-    fill: #dddddd;
+  fill: #dddddd;
 }
 
-hr, #date, .social-links, .social-links-title {
-    animation: fade-in 1s linear 0.5s 1 both;
+hr,
+.steam,
+.social-links,
+.social-links-title {
+  animation: fade-in 1s linear 0.5s 1 both;
+}
+
+.steam {
+  max-width: 100vw;
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.responsive-iframe {
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0; */
+  /* width: 646;
+  height: 190; */
 }
