--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,10 @@ hr,
   animation: fade-in 1s linear 0.5s 1 both;
 }
 
+.name {
+  animation: fade-in 1s linear 0.3s 1 both;
+}
+
 .steam {
   max-width: 100vw;
   width: 100%;
